# teamdeck-vacations

./: .fpm  .gitignore  Cargo.toml  LICENSE  README.md  justfile  setup.sh
assets/: Info.plist
src/: lib.rs  main.rs  ui.rs
