[package]
name = "teamdeck-vacations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
eframe = "0.18.0"
egui_extras = "0.18.0"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"] }
